# fnkey

./: .gitignore  AppIcon.icns  CLAUDE.md  Cargo.toml  Info.plist  README.md  build-app.sh  gen-icon.py
.github/workflows/: release.yml
src/: main.rs
